--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@testing-library/user-event": "^12.2.0",
     "axios": "^0.21.0",
     "dotenv": "^8.2.0",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-use": "^15.3.4",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
