--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-stars": "^2.2.5",
     "react-use": "^15.3.4",
     "web-vitals": "^0.2.4"
   },
